# petrophys-viz

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/raw/cores/: CAP-01_cores.csv  CAP-01_kernmetingen.csv
data/raw/logs/: 2571_cap01_1985_comp.las  CAP-1_TZ_RD.txt  CAPELLE__1.las
data/raw/tops/: Diepte_stratigrafische_eenheden.csv
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 00_introduction_data.ipynb  01_geomech_properties.ipynb  02_well_logs_visualization.ipynb  03_well_and_cores_visualization.ipynb  04_core_measurements_plotting.ipynb  test.ipynb  test_dapgeo-02-phase2.ipynb  visualization_template.ipynb  well_log_vis.ipynb
petrophys/: 01_geomech_properties.py  04_core_measurements_plotting.py
petrophys/data/: utils.py
petrophys/visualization/: visualize.py
references/: appendix_a_list_of_wells_and_data_files_used.xlsx  appendix_b_summary_data_sheet.xlsx  list_of_wells_and cores.xlsx
src/: 00_introduction_data.py  02_well_logs_visualization.py  03_well_and_cores_visualization.py  well_log_vis.py
src/visualization/: visualize.py
tests/: test_convert_value_to_nan.py
