[metadata]
name = petrophys
version = attr: petrophys.__version__
description = Visualization of the main geothermal targets in the Netherlands
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anailil/petrophys-viz
author = Liliana Vargas Meleza
author_email = 
license = MIT License
key_words = petrophysics, geothermal wells
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.11	

[options]
packages = find:
install_requires = 	
	lasio
    numpy
    matplotlib
    openpyxl
	pandas
	
[options.extras_require]
dev = 
	black
	ipykernel
	myst-parser
	pytest
	pytest-cov
	sphinxcontrib-mermaid
	sphinx-copybutton
	sphinx-rtd-theme
	sphinx-book-theme
	sphinx>7